--- a/src/styles/About.module.css
+++ b/src/styles/About.module.css
@@ -15,7 +15,7 @@
 .imageContainer {
     width: 100%;
     max-width: 300px;
-    margin-bottom: 20px;
+    margin-top: 100px;
 }
 
 .profileImage {
@@ -33,7 +33,7 @@
 
 .font {
     font-size: 36px;
-    margin-bottom: 20px;
+    margin-top: 100px;
 }
 
 .description {
