--- a/src/styles/profile.module.css
+++ b/src/styles/profile.module.css
@@ -23,16 +23,16 @@
 }
 
 .name {
-  font-size: 25px;
+  font-size:25px;
   color: orange;
 }
 
 .role {
   font-size: 60px;
-  margin-top: 10px;
-  font-weight: 600;
-  line-height: 1.1;
+  margin-top: 0px;
+  font-weight:600;
 }
+
 
 .description {
   margin-top: 20px;
@@ -44,11 +44,10 @@
   color: black;
   border: none;
   padding: 10px 20px;
-  margin-top: 30px;
+  margin-top: 20px;
   cursor: pointer;
   font-weight: bold;
   font-size: 16px;
-  border-radius: 10px;
 }
 
 .imageContainer {
@@ -76,17 +75,26 @@
   margin: 0 10px;
   font-size: 24px;
   cursor: pointer;
+  position: relative;
+  top:200px;
+  right: 320px;
+
 }
 
 .socialLinks i:hover {
   color: orange;
 }
 
+
+
+
+
 @media (max-width: 1200px) {
   .container {
     margin: 40px 50px 0 50px;
     padding: 30px;
     background-color: black;
+
   }
 
   .textContainer {
@@ -152,7 +160,8 @@
 
   .profileImage {
     width: 200px;
-    margin-top: 30px;
+    margin-top:30px;
+
   }
 
   .socialLinks {
@@ -197,3 +206,140 @@
     font-size: 18px;
   }
 }
+
+.role {
+  font-size: 60px;
+  margin-top: 10px;
+  font-weight: 600;
+  line-height: 1.1;
+}
+
+.test {
+  display: block;
+  margin-left:100px;
+}
+
+.hireMeButton{
+    margin-top:30px;
+    width: 200px;
+    border-radius: 10px;
+  }
+
+  @media (max-width: 1200px) {
+    .container {
+      margin: 40px 50px 0 50px;
+      padding: 30px;
+      background-color: black;
+
+    }
+  
+    .textContainer {
+      max-width: 60%;
+    }
+  
+    .name {
+      font-size: 36px;
+    }
+  
+    .role {
+      font-size: 28px;
+    }
+  
+    .description {
+      font-size: 14px;
+    }
+  
+    .hireMeButton {
+      font-size: 14px;
+      padding: 8px 16px;
+    }
+  
+    .profileImage {
+      width: 250px;
+    }
+  
+    .socialLinks i {
+      font-size: 20px;
+    }
+  }
+
+  @media (max-width: 768px) {
+    .container {
+      flex-direction: column;
+      align-items: center;
+      margin: 20px;
+      padding: 20px;
+      background-color: black;
+    }
+  
+    .textContainer {
+      max-width: 100%;
+      text-align: center;
+    }
+  
+    .name {
+      font-size: 28px;
+    }
+  
+    .role {
+      font-size: 24px;
+    }
+  
+    .description {
+      font-size: 14px;
+    }
+  
+    .hireMeButton {
+      font-size: 14px;
+      padding: 8px 16px;
+    }
+  
+    .profileImage {
+      width: 200px;
+      margin-top: 30px;
+    }
+  
+    .socialLinks {
+      flex-direction: column;
+    }
+  
+    .socialLinks i {
+      font-size: 20px;
+      margin: 5px 0;
+    }
+  }
+
+  @media (max-width: 480px) {
+    .container {
+      margin: 10px;
+      padding: 15px;
+      background-color: black;
+    }
+  
+    .name {
+      font-size: 24px;
+    }
+  
+    .role {
+      font-size: 20px;
+    }
+  
+    .description {
+      font-size: 12px;
+    }
+  
+    .hireMeButton {
+      font-size: 12px;
+      padding: 6px 12px;
+    }
+  
+    .profileImage {
+      width: 150px;
+    }
+  
+    .socialLinks i {
+      font-size: 18px;
+    }
+  }
+  
+  
