--- a/src/styles/About.module.css
+++ b/src/styles/About.module.css
@@ -1,6 +1,3 @@
-/* About.module.css */
-
-/* Base Styles */
 .wrapper {
     display: flex;
     flex-direction: column;
@@ -14,15 +11,15 @@
 
 .imageContainer {
     width: 100%;
-    max-width: 300px;
-    margin-top: 100px;
-}
-
-.profileImage {
+    max-width:400px; 
+    margin-top: 150px; 
+  }
+  
+  .profileImage {
     width: 100%;
-    height: auto;
-    border-radius: 10px;
-}
+    height: auto; 
+    border-radius: 10px; 
+  }
 
 .content {
     width: 100%;
@@ -33,27 +30,31 @@
 
 .font {
     font-size: 36px;
-    margin-top: 100px;
+    margin-top: 130px;
 }
 
 .description {
     margin-top: 20px;
+    display: flex;
+    margin-right:200px;
+
 }
 
 .range {
-    margin-top: 40px;
+    margin-top: 20px;
 }
 
 .range p {
     margin: 10px 0;
+    margin-top:5px;
 }
 
 .range input[type='range'] {
     -webkit-appearance: none;
-    width: 100%;
+    width: 90%;
     height: 8px;
     border-radius: 10px;
-    background-color: orange;
+    background-color: #FD6F00;
     cursor: pointer;
 }
 
@@ -61,7 +62,7 @@
 .range input[type='range']::-moz-range-track,
 .range input[type='range']::-ms-fill-lower,
 .range input[type='range']::-ms-fill-upper {
-    background-color: orange;
+    background-color:#FD6F00;
     border-radius: 10px;
     height: 8px;
 }
@@ -73,15 +74,13 @@
     width: 20px;
     height: 20px;
     background-color: #fff;
-    border: 2px solid orange;
+    border: 2px solid #FD6F00;
     border-radius: 50%;
     cursor: pointer;
     margin-top: -6px;
 }
 
-/* Media Queries for Responsiveness */
 
-/* Tablets */
 @media (min-width: 600px) {
     .wrapper {
         flex-direction: row;
@@ -103,7 +102,6 @@
     }
 }
 
-/* Laptops and Desktops */
 @media (min-width: 900px) {
     .wrapper {
         padding: 50px;
