--- a/src/styles/footer.module.css
+++ b/src/styles/footer.module.css
@@ -1,64 +1,75 @@
 .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding: 20px;
-    margin-top: 100px;
-  }
-  
-  .content {
-    text-align: center;
-  }
-  
-  .heading {
-    font-style: normal;
-    line-height: 98px;
-    font-size: 50px;
-    color: #FFFFFF;
-    margin-bottom: 20px;
-  }
-  
-  .paragraph {
-    font-family: 'Poppins', sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 21px;
-    line-height: 32px;
-    color: #FFFFFF;
-    margin-bottom: 40px;
-    max-width: 932px;
-    margin-left: auto;
-    margin-right: auto;
-  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 20px;
+  margin-top: 100px;
+}
 
-  .links{
-    display: flex;
-    gap:30px;
-  }
+.content {
+  text-align: center;
+}
 
-  .icons{
-    display: flex;
-    justify-content: center;
-    margin:40px;
-    height:60px;
-    width: 300px;
-  }
+.heading {
+  font-style: normal;
+  line-height: 98px;
+  font-size: 50px;
+  color: #FFFFFF;
+  margin-bottom: 20px;
+  display: flex;
+  align-items: center; /* Align items vertically centered */
+  justify-content: center; /* Center items horizontally */
+}
 
-  .icons i{
-    font-size: 30px;
-    margin:0 10px;
-    position:relative;
-    left:90px;
-  }
+.logo {
+  margin-right: 10px; /* Space between logo and "M" */
+  width: 50px;
+}
 
-  .name{
-    color:orange;
-  }
+.m {
+  font-weight: 800;
+  font-size: 50px; /* Adjust as needed */
+}
 
+.paragraph {
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 21px;
+  line-height: 32px;
+  color: #FFFFFF;
+  margin-bottom: 40px;
+  max-width: 932px;
+  margin-left: auto;
+  margin-right: auto;
+}
 
+.links {
+  display: flex;
+  gap: 30px;
+}
 
-  /* Mobile Devices (Portrait and Landscape) */
+.icons {
+  display: flex;
+  justify-content: center;
+  margin: 40px;
+  height: 60px;
+  width: 300px;
+}
+
+.icons i {
+  font-size: 30px;
+  margin: 0 10px;
+  position: relative;
+  left: 90px;
+}
+
+.name {
+  color: orange;
+}
+
+/* Mobile Devices (Portrait and Landscape) */
 @media (max-width: 767px) {
   .container {
     padding: 10px;
@@ -167,5 +178,3 @@
     gap: 30px;
   }
 }
-
-  
