--- a/src/styles/projects.module.css
+++ b/src/styles/projects.module.css
@@ -1,4 +1,3 @@
-/* Container styling */
 .container {
   display: flex;
   justify-content: center;
@@ -10,76 +9,68 @@
   background-color: black;
 }
 
-/* Content styling */
 .content {
   text-align: center;
   padding: 20px;
 }
 
-/* Heading styling */
 .heading {
   font-style: normal;
-  line-height: 1.2; /* Use relative units */
-  font-size: 3rem; /* Adjusted for responsiveness */
+  line-height: 1.2;
+  font-size: 3rem;
   color: #FFFFFF;
   margin-bottom: 20px;
 }
 
-/* Paragraph styling */
 .paragraph {
   font-family: 'Poppins', sans-serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 1.3rem; /* Adjusted for responsiveness */
+  font-size: 1.3rem;
   line-height: 1.6;
   color: #FFFFFF;
   margin-bottom: 40px;
-  max-width: 90%; /* Use percentage for better scaling */
-  margin-left: auto;
-  margin-right: auto;
+  max-width: 90%;
+  display: block;
+  margin-left: 100px;
+  margin-right: 100px;
 }
 
-/* Button styling */
 .button {
   background-color: white;
   border: 1px solid #ccc;
   color: #333;
   padding: 10px 20px;
   border-radius: 5px;
-  font-size: 1rem; /* Adjusted for responsiveness */
+  font-size: 1rem;
   cursor: pointer;
   transition: background-color 0.3s, border-color 0.3s;
   margin: 5px;
 }
 
-.btn3 {
-  background-color: #FF8C00;
+.button:hover {
+  background-color: #FD6F00;
 }
 
-/* Image container styling */
 .img {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
   gap: 20px;
   margin: 50px 0;
-  width: 100%; /* Ensure it fits within the container */
+  width: 100%;
 }
 
-/* Individual image styling */
 .img img {
-  width: calc(33.33% - 20px); /* Responsive width */
-  height: auto; /* Ensure the image height adjusts to the width */
+  width: calc(33.33% - 20px);
+  height: auto;
   object-fit: cover;
   border-radius: 10px;
 }
 
-/* Responsive Media Queries */
-
-/* For tablets and larger mobile devices */
 @media (max-width: 768px) {
   .heading {
-    font-size: 2.5rem; /* Smaller font for smaller screens */
+    font-size: 2.5rem;
   }
 
   .paragraph {
@@ -87,14 +78,13 @@
   }
 
   .img img {
-    width: calc(50% - 10px); /* Adjust image width to 2 per row */
+    width: calc(50% - 10px);
   }
 }
 
-/* For mobile devices */
 @media (max-width: 480px) {
   .heading {
-    font-size: 2rem; /* Smaller font for mobile devices */
+    font-size: 2rem;
   }
 
   .paragraph {
@@ -102,7 +92,7 @@
   }
 
   .img img {
-    width: 100%; /* Full width images for mobile */
+    width: 100%;
   }
 
   .container {
